# Arctos

./: .gitignore  COINGECKO_INTEGRATION_SUMMARY.md  EMAIL_DELIVERY_DIAGNOSTIC.md  LIVE_PRICES_FIX.md  PRODUCTION_SETUP_CHECKLIST.md  PROJECT_SPECIFICATIONS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
.claude/: audit.md
.github/: PROJECT_SPECIFICATIONS.md  RUST_DEPENDENCIES.md  copilot-instructions.md
.github/workflows/: deploy-vercel.yml
api/: brevo.js  news.js  resend.ts  waitlist.js
api/resend/: route.ts
arctos/: package-lock.json  package.json
backend/: .gitignore  Cargo.toml
backend/.cargo/: config.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  types.rs
backend/src/handlers/: dashboard.rs  email.rs  mod.rs  news.rs  sniper.rs  tradebook.rs  ws_dashboard.rs  ws_sniper.rs
server/: README.md  index.js  mailchimp-server.js  package.json
server/api/resend/: route.ts
src/: App.tsx  main.tsx
src/app/: App.tsx
src/app/api/send/: route.ts
src/app/components/: AIChat.tsx  AssetTabs.tsx  AuthGuard.tsx  AutomatedTrading.tsx  DashboardView.tsx  EmailAuthModal.tsx  FundamentalNews.tsx  Homepage.tsx  PortfolioWidgets.tsx  Sidebar.tsx  SniperPanel.tsx  StocksPreIPO.tsx  TradeBook.tsx  TradingTerminal.tsx  TradingViewChart.tsx  WaitlistModal.tsx  WalletConnectionModal.tsx  WhaleAlert.tsx
src/app/components/figma/: ImageWithFallback.tsx
src/app/components/ui/: sonner.tsx
src/app/contexts/: AuthContext.tsx  Themecontext.tsx
src/app/hooks/: useAIContext.ts
src/app/services/: aiService.ts  brevoService.ts  dashboardSyncService.ts  newsService.ts  resendService.ts  sniperService.ts  walletService.ts
src/components/: DashboardView.tsx  Homepage.tsx  Settings.tsx  Sidebar.tsx  WalletConnectionModal.tsx
src/core/helpers/mails/: welcome.html
src/styles/: globals.css
src/types/: window.d.ts
