[package]
name    = "arctos-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arctos-backend"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["ws", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["cors", "trace"] }
tower         = "0.4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
sqlx          = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
reqwest       = { version = "0.11", features = ["json", "native-tls"] }
chrono        = { version = "0.4", features = ["serde"] }
uuid          = { version = "1",   features = ["v4"] }
dotenv        = "0.15"
anyhow        = "1"
thiserror     = "1"
futures-util  = "0.3"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "hostname", "builder"] }
